--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             </div>
         </div>
     </section>
+    <a href="https://jeremyfrazier.fr"><button id="back">Accueil</button></a>
 
     <script src="script.js"></script>
 </body>
