--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 </div>
             </div>
         </div>
+        <p class="flyer">Vous trouverez ci-joint le FLyer explicatif des remises et description des médailles <a href="Flyer JO.pdf">Téléchargez le ici</a></p>
     </section>
     <a href="https://jeremyfrazier.fr"><button id="back">Accueil</button></a>
 
